--- a/inscripcion/CapaDatos/CapaDatos.csproj
+++ b/inscripcion/CapaDatos/CapaDatos.csproj
@@ -56,8 +56,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CDCargo.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sistema_Conexion.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="DBInscripcion.mdf">
