--- a/inscripcion/CapaDatos/CapaDatos.csproj
+++ b/inscripcion/CapaDatos/CapaDatos.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CDCargo.cs" />
+    <Compile Include="CDCurso.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sistema_Conexion.cs" />
